# heliot

./: .gitignore  README.md
cdss/: pyproject.toml
cdss/data_proc/: download_lf.py  extract_drugs.py  extract_excipients.py  extract_ingredients.py  synthetic_patients.py  update_drugs_ds.py
cdss/heliot/: db_management.py  dss_prompts.py  ingredients_onthology.py  leaflet_preproc.py  leaflets_prompts.py  synth_experiment.py
cdss/heliot/api/services/: heliot_llm.py
data/output/: excipients.xlsx  ingredients.xlsx  patients_complete.xlsx
heliot_cdss/: README.md  class_distr_graph.xlsx  patients_synthetic.xlsx  patients_synthetic_orig.xlsx  processed_data.xlsx  pyproject.toml  results_full_synth.xlsx
heliot_cdss/cdss/heliot/: create_synth_patients.py  db_management.py  dss_prompts.py  ingredients_onthology.py  patient_management.py  result_analysis.py  result_kappa_class.py  result_kappa_react.py  synth_experiment_full_synth.py
heliot_cdss/cdss/heliot/api/: main.py  (+1 more)
heliot_cdss/drugs_db/__schema/: __1719342098226_1719342098226_4c7719d4366511f32139b719664eeb7f  __1739962329780_1739962329780_434f8f544330332e26381673810999cc
heliot_cdss/results/I/: results_full_synth.xlsx
heliot_pipeline/: README.md  atc.json  drug_statistics.xlsx  drugs_excipients_to_check.xlsx  drugs_subset.xlsx  excipients.json  patient_cases.json  patients_synthetic.xlsx  pyproject.toml
heliot_pipeline/data_pipeline/: create_synth_patients.py  download_lf.py  drug_subset.py  drugs_stats.py  extract_drugs.py  leaflet_info_extractor.py  leaflet_preproc.py  leaflets_prompts.py  synth_stats.py
(+677 files in other folders)
