[tool.poetry]
name = "heliot"
version = "0.1.0"
description = ""
authors = ["Gabriele De Vito <gabriele.devito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tiledb-vector-search = "^0.3.0"
lxml = "^5.2.1"
bs4 = "^0.0.2"
tiktoken = "^0.6.0"
openai = "^1.28.1"
openpyxl = "^3.1.2"
tiledb = "^0.29.0"
unidecode = "^1.3.8"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
